# cookiecutter-uv

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  cookiecutter-uv.code-workspace  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: linting.md
features/cicd/: index.html
features/codecov/: index.html
features/devcontainer/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
hooks/: post_gen_project.py
prompt_arguments/: index.html
search/: search_index.json
tests/: test_cookiecutter.py
tutorial/: index.html
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  AUTHORS.md  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/docs/: getting-started.md  index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  foo.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
